# csh-ldap

./: AUTHORS  ChangeLog  README.md  setup.cfg
csh-ldap/: group.py
csh_ldap/: __init__.py  group.py  member.py
