[metadata]
name = csh-ldap
author = CSH RTP
author_email = rtp@csh.rit.edu
url = https://github.com/ComputerScienceHouse/csh-ldap
description = CSH LDAP ORM
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
version = 2.5.4
classifier =
    Natural Language :: English
    Operating System :: POSIX :: Linux
